# plugins

./: README.md
.ci/: badges.py  test.py  update_badges.py  utils.py
.github/workflows/: main.yml  nightly.yml
backup/: pyproject.toml
donations/: pyproject.toml
