[tool.poetry]
name = "cln-backup"
version = "0.1.0"
description = "Keep your Core-Lightning node save by backing it up, in real-time (allows recovering without channel closures)."
authors = ["Christian Decker <decker@blockstream.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyln-client = "^24.2.1"
click = "^8.0.4"
psutil = "^5.9.8"
flask = "<3"
werkzeug = "<4"

[tool.poetry.group.dev.dependencies]
pyln-testing = "^24.2.1"
flaky = "^3.7.0"
pytest-timeout = "^2.2.0"
pytest-xdist = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
